--- a/doc/tex/intro.tex
+++ b/doc/tex/intro.tex
@@ -27,10 +27,11 @@ The game itself is rich in complexity and difficulty can vary from
 very easy to incredibly complex, for both human players and automatic
 solvers. This of course depends on the initial floor plan.
 
-The high game complexity stems from, among other things: 
+The high game complexity stems from, among other things:
 \begin{itemize}
 \item The game is PSPACE Complete. \cite{culberson97sokobanpspace}
-\item Some game states cannot be reversed (deadlocks, pushing boxes against walls, etc.)
+\item Some game states cannot be reversed (deadlocks, pushing boxes
+  against walls, etc.)
 \item Up to moves at each state. (Grows as $n^4$.)
 \end{itemize}
 
@@ -57,9 +58,11 @@ We chose to put our primary focus in the project and the report on
 implementating a solver for arbitrary Sokoban floor plans.
 
 This means that large parts of this report will deal with the design
-and implemenation of such a solver. This also implies that we to a
-lesser degree address the more academic studies of complexity in the
-game.
+and implemenation of such a solver and the heuristics that goes along
+with it.
+
+This also implies that we to a lesser degree address the more academic
+studies of complexity in the game.
 
 We will implement at least 3 different techniques for solving the
 Sokoban challenges:
