--- a/doc/tex/heuristics.tex
+++ b/doc/tex/heuristics.tex
@@ -159,6 +159,7 @@ directions.
 \end{figure}
 
 \paragraph{CornerHeuristic}Another very powerful deadlock detector is
+\label{sec:cornerheur}
 the CornerHeuristic. It decides on which squares the boxes will never
 be allowed, illegal squares, as the boxes will not be able to leave
 these areas thus making them reach the goal imposible. The illegal
