--- a/doc/tex/app-stats.tex
+++ b/doc/tex/app-stats.tex
@@ -1,4 +1,4 @@
-\chapter{Statistics}
+\chapter{Statistical Behaviour}
 \label{app:results}
 Here we present the graphs the heuristic selection was based on. They
 are not commented here.
@@ -289,3 +289,5 @@ systems, but more about the behaviour of each heuristic.
 \end{figure}
 
 \clearpage
+
+\input{levelset0-solutions}
