--- a/doc/tex/heuristics.tex
+++ b/doc/tex/heuristics.tex
@@ -198,7 +198,7 @@ in which direction a wall is located and unmarks all fields in the
 direction ortogonal to this.
 
 In steps the algorithm does the following. The steps is also
-illustrated in figure \ref{fig:cornerheuristic}.
+illustrated in figure \ref{fig:cornerheuristic-steps}.
 \begin{itemize}
 \item The map is read
 \item Each corner is found and marked by either \textit{i} or
@@ -218,6 +218,6 @@ illustrated in figure \ref{fig:cornerheuristic}.
   \includegraphics[width=0.33\textwidth]{corner4}
   \includegraphics[width=0.33\textwidth]{corner5}
   \caption{CornerHeuristic in steps}
-  \label{fig:cornerheuristic}
+  \label{fig:cornerheuristic-steps}
 \end{figure}
 
