--- a/doc/tex/levelset0-solutions.tex
+++ b/doc/tex/levelset0-solutions.tex
@@ -7,7 +7,7 @@ Here we present the solution statistics for the target level set
 For each of the level (represented below with a table) the solver
 mentioned under \textbf{Name} was run with a $10$ second timeout.  The
 length of the solution trace was noted under \textbf{Steps} (or $0$ if
-no solution was found within the alloted tme). The time it took to
+no solution was found within the alloted time). The time it took to
 come to this conclusion is noted in the \textbf{Time} column.
 
 \begin{table}
