--- a/doc/tex/intro.tex
+++ b/doc/tex/intro.tex
@@ -99,7 +99,9 @@ First we develop a STRIPS formulation of Sokoban (Chapter
 \ref{cha:design} to construct an executable model of the game along
 with a breadth-first solver. In Chapter \ref{cha:heuristics} we define
 the heuristics needed to guide the search. We then continue to analyse
-our findings in Chapter \ref{cha:analysis}. Before finally we summing
-the results in Chapter \ref{cha:conclusion}.
+our findings in Chapter \ref{cha:analysis}. Chapter
+\ref{cha:discussion} is where we discuss the improvements and more the
+solver could benefit from. Finally in Chapter \ref{cha:conclusion} we
+conclude this report.
 
 
