--- a/doc/require/bibtex.bib
+++ b/doc/require/bibtex.bib
@@ -1,4 +1,16 @@
 
+
+
+@Misc{gpl,
+  author =	 {{Free Software Foundation}},
+  title =	 {{GNU} General Public License},
+  note =	 {Available from: \url{http://www.gnu.org/copyleft/gpl.html}}}
+
+@Misc{sokobano:level_format,
+  author =	 {Sokobano},
+  title =	 {Level Format},
+  note =	 {\url{http://sokobano.de/wiki/index.php?title=Level_format}, in general a very good site for Sokoban information.}}
+
 @INPROCEEDINGS{Junghanns99domain-dependentsingle-agent,
   author =	 {Andreas Junghanns and Jonathan Schaeffer},
   title =	 {Domain-Dependent Single-Agent Search Enhancements},
